fixed side-nav icons alignment

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -860,7 +860,7 @@ a.github-fork {
 			width: 26px;
 			display: inline-block;
 			text-align: center;
-			margin-right: 0px;
+			margin-left: 0 -1px 0 1px;
 		}
 		a {
 			position: relative;
@@ -1305,6 +1305,9 @@ a.github-fork {
 				&:hover {
 					color: rgba(255, 255, 255, 0.75);
 				}
+			}
+			.icon-cancel-circled:before{
+				margin-left: 1px;
 			}
 		}
 		i {
